--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "(PRINCE-BOT)",
+  "name": "(𝑭𝑨𝑹𝑶𝑶𝑸-𝑯𝑨𝑪𝑲𝑬𝑹)",
   "description": "Prince MD A WhatsApp User BOT",
-  "logo": "https://telegra.ph/file/d9bcfd1ae673ebd58bd3e.jpg",
+  "logo": "https://telegra.ph/file/d8730dff864a6498728a1.jpg",
   "keywords": ["java", "bot", "whatsapp-bot", "whatsapp-automation"],
   "repository": "https://github.com/PRINCE-GDS/THE-PRINCE-BOT",
   
